<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:shrinkColumns="*"
    android:stretchColumns="2">
    <TableRow android:id="@+id/wiersz1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etykieta1"
            android:text="@string/napis1">
        </TextView>
        <EditText android:layout_span="2"
            android:layout_width="wrap_content"
            android:text=""
            android:layout_height="wrap_content"
            android:id="@+id/edycja1">
        </EditText>
    </TableRow>
    <TableRow android:id="@+id/wiersz2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etykieta2"
            android:text="@string/napis2">
        </TextView>
        <EditText android:layout_span="2"
            android:layout_width="wrap_content"
            android:text=""
            android:layout_height="wrap_content"
            android:id="@+id/edycja2">
        </EditText>
    </TableRow>
    <TableRow android:id="@+id/wiersz3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etykieta3"
            android:text="@string/napis3">
        </TextView>
        <EditText android:layout_span="2"
            android:layout_width="wrap_content"
            android:text=""
            android:layout_height="wrap_content"
            android:id="@+id/edycja3">
        </EditText>
    </TableRow>
    <TableRow android:id="@+id/wiersz4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etykieta4"
            android:text="@string/napis4">
        </TextView>
        <EditText android:layout_span="2"
            android:layout_width="wrap_content"
            android:text=""
            android:layout_height="wrap_content"
            android:id="@+id/edycja4">
        </EditText>
    </TableRow>
    <TableRow android:id="@+id/wiersz5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stronawww" android:text="@string/napis5">
        </Button>
        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/anuluj" android:text="@string/napis6">
        </Button>
        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/zapisz" android:text="@string/napis7">
        </Button>
    </TableRow>

</TableLayout>